
- 'Relative Hazard' no longer an accepted value for the `qi` argument in `coxsimLinear`, because it produced trivial graphs.

- No longer produces a legend for Xj and Xl comparisons for First Differences.

- `spin = TRUE` works for quantities of interest when Xj - Xl = 0, i.e. in situations when all of the simulated quantities are 1 (or 0 for First Differences).

- Documentation improvements.

- Bug fixes, particularly with the SPIn lower bound for different quantities of interest.

Version 0.6

- Increased flexibility for setting confidence levels. Now they may be set at any numeric value from 0 through 1.

- Choice of using confidence levels for the middle simulation values or the shortest probability interval. 

	- Many thanks to Ying Liu. Code from his SPIn function is fundamental for making this possible.

- `qi` now automatically determined by `simGG`.

- `means` argument added to `coxsimLinear` and coxsimInteract`. This allows the user to choose if they would like Hazard Rates to be fitted using the variables (other than the variables of interest) set to their means rather than 0. Note: it does not currently support models that include polynomials created by `I`. 
	
	- `means` will be added to the other simulation commands in future versions.

- Minor bug fixes and documentation updates.


Version 0.05

**Major update** to the way simPH plots simulated objects. Instead of using seperate commands for plotting objects of different sim classes it now uses the method `simGG`. 

In practical terms this means that you can now just use the command `simGG` rather than the old gg. . . commands.

Version 0.04.62 

Minor bug fix for `ci` argument.

Version 0.04.6.1

Minor change: now line drawn.


Version 0.04.6

Standardise how hazard rates are calculated.

Version 0.04.5

Made updates so that the package is compatible with data.table package version 1.8.8.

Version 0.04.4

Minor improvement to ggtvc legend

Version 0.04.3 

Minor bug fixes.

Version 0.04.2
